<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>ca.on.oicr.gsi</groupId>
        <artifactId>pipedev</artifactId>
        <version>2.0-rc3-SNAPSHOT</version>
    </parent>
    
    <artifactId>pipedev-file-provenance-client</artifactId>
    <packaging>jar</packaging>
    
    <name>pipedev-file-provenance-client</name>
    
    <properties>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <seqwareWar>${com.github.seqware:seqware-webservice:war}</seqwareWar>
        <skipITs>true</skipITs>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>ca.on.oicr.gsi</groupId>
            <artifactId>provenance-api</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr.gsi</groupId>
            <artifactId>provenance-core</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr</groupId>
            <artifactId>pinery-client</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.seqware</groupId>
            <artifactId>seqware-common</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr.gsi</groupId>
            <artifactId>pipedev-provenance-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>net.sf.jopt-simple</groupId>
            <artifactId>jopt-simple</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr.gsi</groupId>
            <artifactId>pipedev-common</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.on.oicr.gsi</groupId>
            <artifactId>pipedev-test-utils</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-joda</artifactId>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <skip>${skipITs}</skip>
                    <systemPropertyVariables>
                        <dbHost>${dbHost}</dbHost>
                        <dbPort>${dbPort}</dbPort>
                        <dbUser>${dbUser}</dbUser>
                        <dbPassword>${dbPassword}</dbPassword>
                        <seqwareWar>${seqwareWar}</seqwareWar>
                    </systemPropertyVariables>
                    <argLine>-XX:PermSize=256M -XX:MaxPermSize=512M -Xmx4096M</argLine>
                    <parallel>methods</parallel>
                    <forkCount>2C</forkCount>
                    <reuseForks>true</reuseForks>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <phase>integration-test</phase>
                    </execution>
                    <execution>
                        <id>verify</id>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${project.artifactId}-${project.version}</finalName>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>ca.on.oicr.gsi.fileprovenance.Client</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
